--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -28,9 +28,7 @@
             <a class="nav-link text-dark" [routerLink]="['/']">Parking Spot</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/vehicle-park']">Vehicle Park</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
