--- a/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -31,9 +31,7 @@
             <a class="nav-link text-dark" [routerLink]="['/vehicle-park']">Vehicle Park</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/vehicle-leave']">Vehicle Leave</a>
           </li>
         </ul>
       </div>
